@@ -1,3 +1,7 @@
+10/29/19
+  - Moved examples from pylogix to root directory
+  - Added comments about how data is returned.
+
 10/02/19
   - setup.py imports version from __init__
   - update tests\readme with tox info
